# TacticsMaster

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .railwayignore  API_SETUP_GUIDE.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENTS_SUMMARY.md  CODE_STRUCTURE_IMPROVEMENT_PLAN.md  Dockerfile  ENHANCED_ERROR_HANDLING_AND_CODE_QUALITY.md  FRONTEND_RAILWAY_DEPLOYMENT_GUIDE.md  Procfile  RAILWAY_BACKEND_SETTINGS.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DOCKERFILE_CONTEXT_FIX.md  RAILWAY_FINAL_DEPLOYMENT_SOLUTION.md  RAILWAY_FORCE_NIXPACKS_SOLUTION.md  RAILWAY_FRONTEND_BUILD_CONTEXT_FIX.md  RAILWAY_FRONTEND_DEPLOYMENT_FIX.md  RAILWAY_NIXPACKS_DEPLOYMENT_SOLUTION.md  RAILWAY_NIXPACKS_FINAL_SOLUTION.md  RAILWAY_NIXPACKS_FRONTEND_DETECTION_FIX.md  RAILWAY_NIXPACKS_FRONTEND_DIRECTORY_FIX.md  README.md  TEST_SUITE_SUMMARY.md  VERCEL_DEPLOYMENT_GUIDE.md  build-frontend.js  build-frontend.sh  build.sh  deploy-to-railway.bat  deploy-to-railway.sh  env_template  nixpacks.toml  package.json  railway.json  railway.toml  requirements.txt  setup.bat  start_backend.bat  start_frontend.bat  (+3 more)
.github/workflows/: quality.yml
.nixpacks/: build.sh  nixpacks.toml  start.sh
app/: __init__.py  agent.py  exceptions.py  main.py
app/tools/: __init__.py  cricket_api_tools.py  tactical_tools.py
backend/: Dockerfile  QUALITY_SUMMARY.md  README.md  cricket_data_tool.py  env.example  hybrid_agent.py  main.py  pyproject.toml  requirements-railway-optimized.txt  requirements-railway.txt  requirements-simple.txt  requirements.txt  response_generation_tool.py  run.py  simple_backend.py  start_backend.py  start_hybrid_backend.py  start_with_apis.py  tactical_analysis_tool.py  tactics_master_agent.py  taskfile.yml  test_backend.py  test_hybrid_backend.py  vercel.json
backend/docs/: CODE_QUALITY_GUIDE.md
backend/requirements/: base.txt  development.txt  production.txt  testing.txt
backend/src/: __init__.py  main.py
backend/src/agents/: base_agent.py  hybrid_agent.py
backend/src/api/models/: requests.py  responses.py
backend/src/api/v1/: dependencies.py
backend/src/api/v1/endpoints/: analysis.py  health.py  status.py
backend/src/config/: __init__.py  settings.py
backend/src/core/: __init__.py  dependencies.py  exceptions.py  logging.py  middleware.py  validation.py
backend/src/models/: __init__.py  requests.py  responses.py
backend/tests/: test_comprehensive_quality.py
data/: mock_data.json
frontend/: Dockerfile  Dockerfile.simple  deploy-to-railway.bat  deploy-to-railway.sh  env.example  env.production  nixpacks.toml  package-lock.json  package-railway.json  package.json  railway.json  tailwind.config.js
frontend/src/: App.js  index.css
frontend/src/components/: About.js  AnalysisDisplay.js  Header.js  LoadingSpinner.js  QueryInput.js  WelcomePage.js
frontend/src/services/: api.js
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_agent.py  test_code_quality_improvements.py  test_comprehensive_agent.py  test_comprehensive_backend_api.py  test_comprehensive_cricket_api_tools.py  test_comprehensive_error_handling.py  test_comprehensive_hybrid_agent.py  test_comprehensive_integration.py  test_comprehensive_performance.py  test_comprehensive_tactical_tools.py  test_enhanced_error_handling.py  test_runner.py  test_tools.py
tests/integration/: test_system_integration.py
tests/unit/: test_agent_unit.py  test_backend_main_unit.py  test_hybrid_agent_unit.py  test_tactical_tools_unit.py
